# auto-analyser

./: .coverage  README.md  lens-family.example.yaml  poly-lens.example.yaml  pyproject.toml
src/auto_analyser/: cli.py  config.py  detector.py  router.py
src/multi_analyser/: cli.py  config.py  detector.py  router.py
src/poly_lens/: cli.py
src/prism/: cli.py  config.py  detector.py  router.py
tests/: conftest.py  test_detector.py  test_invariants.py  test_router.py  test_router_http.py
