[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-analyser"
version = "0.2.2"
description = "Auto-analyser — detect a file's format and route it to the right analyser family member"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
]

[project.scripts]
auto-analyser = "auto_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load real models or make network calls — opt-in with `pytest -m slow`",
]
